--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -244,6 +244,7 @@ svg {
 
 table {
   border-collapse: collapse;
+  width: 100%;
 }
 
 caption {
@@ -1530,6 +1531,10 @@ pre code {
   border-top: 1px solid #e3e6f0;
 }
 
+tr:nth-child(1) {
+  background-color: #dddddd; 
+}
+
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #e3e6f0;
@@ -1541,7 +1546,10 @@ pre code {
 
 .table-sm th,
 .table-sm td {
-  padding: 0.3rem;
+/*   padding: 0.3rem; */
+  border: 2px solid #dddddd;
+  text-align: left;
+  padding: 9px;
 }
 
 .table-bordered {
@@ -9756,11 +9764,13 @@ a.text-dark:hover, a.text-dark:focus {
   .table td,
   .table th {
     background-color: #fff !important;
+    border: 9px solid #dddddd !important;
   }
   .table-bordered th,
   .table-bordered td {
-    border: 1px solid #dddfeb !important;
+    border: 9px solid #dddddd !important;
   }
+  
   .table-dark {
     color: inherit;
   }
@@ -9768,7 +9778,7 @@ a.text-dark:hover, a.text-dark:focus {
   .table-dark td,
   .table-dark thead th,
   .table-dark tbody + tbody {
-    border-color: #e3e6f0;
+   border-color: #e3e6f0;
   }
   .table .thead-dark th {
     color: inherit;
