--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -1,38 +1,6 @@
 @CHARSET "ISO-8859-1";
 
-/* body {
-  background-color: white;
-}
-input{
-  border: 4px solid #dddddd;
-  font-family: arial, sans-serif;
-  background-color: blue;
-  color: white;
-  font-weight: bold;
-  font-size: 110%;
-} 
-input{
-  width: 100%;
-}
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 2px solid #dddddd;
-  text-align: left;
-  padding: 9px;
-}
-
-tr:nth-child(even) { // genap
-  background-color: #dddddd;
-}
-tr:nth-child(1) {
-  background-color: #dddddd; */
-  
-  /*!
+/*!
  * Start Bootstrap - SB Admin 2 v4.1.3 (https://startbootstrap.com/theme/sb-admin-2)
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin-2/blob/master/LICENSE)
@@ -244,7 +212,6 @@ svg {
 
 table {
   border-collapse: collapse;
-  width: 100%;
 }
 
 caption {
@@ -1531,10 +1498,6 @@ pre code {
   border-top: 1px solid #e3e6f0;
 }
 
-tr:nth-child(1) {
-  background-color: #dddddd; 
-}
-
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #e3e6f0;
@@ -1546,10 +1509,7 @@ tr:nth-child(1) {
 
 .table-sm th,
 .table-sm td {
-/*   padding: 0.3rem; */
-  border: 2px solid #dddddd;
-  text-align: left;
-  padding: 9px;
+  padding: 0.3rem;
 }
 
 .table-bordered {
@@ -9764,13 +9724,11 @@ a.text-dark:hover, a.text-dark:focus {
   .table td,
   .table th {
     background-color: #fff !important;
-    border: 9px solid #dddddd !important;
   }
   .table-bordered th,
   .table-bordered td {
-    border: 9px solid #dddddd !important;
+    border: 1px solid #dddfeb !important;
   }
-  
   .table-dark {
     color: inherit;
   }
@@ -9778,7 +9736,7 @@ a.text-dark:hover, a.text-dark:focus {
   .table-dark td,
   .table-dark thead th,
   .table-dark tbody + tbody {
-   border-color: #e3e6f0;
+    border-color: #e3e6f0;
   }
   .table .thead-dark th {
     color: inherit;
@@ -11286,4 +11244,5 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
   
